force-app/main/default/objects/Item_Replacement__c/Item_Replacement__c.object-meta.xml
<CustomObject>
    <label>Item Replacement</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Item Replacement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Replacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>