force-app/main/default/objects/Item_Replacement__c/fields/Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Time__c</fullName>
    <label>Approved /Rejected Date</label>
    <type>Date</type>
</CustomField>