force-app/main/default/objects/Item_Replacement__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Item Replacements</relationshipLabel>
    <relationshipName>Item_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>