force-app/main/default/objects/Item_Replacement__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <formula>TEXT( Customer__r.CompanyId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Id</label>
    <type>Text</type>
</CustomField>