force-app/main/default/objects/Item_Replacement__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Item Replacements</relationshipLabel>
    <relationshipName>Item_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>