force-app/main/default/objects/Item_Replacement__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Log</label>
    <referenceTo>DailyLog__c</referenceTo>
    <relationshipLabel>Item Replacements</relationshipLabel>
    <relationshipName>Item_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>