force-app/main/default/objects/Item_Replacement__c/fields/Doc_date__c.field-meta.xml
<CustomField>
    <fullName>Doc_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Doc date</label>
    <type>Date</type>
</CustomField>