force-app/main/default/objects/Item_Replacement__c/fields/Item_Replacement_Approver__c.field-meta.xml
<CustomField>
    <fullName>Item_Replacement_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Replacement Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Item_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>