force-app/main/default/objects/Item_Replacement__c/fields/New_Approval_Flow__c.field-meta.xml
<CustomField>
    <fullName>New_Approval_Flow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Approval Flow</label>
    <type>Checkbox</type>
</CustomField>