force-app/main/default/objects/Item_Replacement__c/fields/Replacement_API_Syn_Time__c.field-meta.xml
<CustomField>
    <fullName>Replacement_API_Syn_Time__c</fullName>
    <label>Replacement API Syn Time</label>
    <type>DateTime</type>
</CustomField>