force-app/main/default/objects/Item_Replacement__c/fields/Replacement_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Replacement_SAP_Code__c</fullName>
    <label>Replacement SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>