force-app/main/default/objects/Item_Replacement__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Item Replacements</relationshipLabel>
    <relationshipName>Item_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>