force-app/main/default/objects/Item_Replacement__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>SAP Code Return</label>
    <length>255</length>
    <type>Text</type>
</CustomField>