force-app/main/default/objects/Item_Replacement__c/fields/Send_to_SAP_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Send_to_SAP_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to SAP Replacement</label>
    <type>Checkbox</type>
</CustomField>