force-app/main/default/objects/Item_Replacement__c/fields/Sent_to_SAP_F__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_SAP_F__c</fullName>
    <formula>if(AND(Sent_to_SAP__c ,Send_to_SAP_Replacement__c ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent to SAP</label>
    <type>Checkbox</type>
</CustomField>