force-app/main/default/objects/Item_Replacement__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Item Replacements</relationshipLabel>
    <relationshipName>Item_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>