force-app/main/default/objects/Item_Replacement__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Date__c</columns>
    <columns>Route__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>